# Demo-ST21Arbiter

./: .dockerignore  .gitignore  .gitleaks.toml  CLAUDE.local.md  CLAUDE.md  README.md  buildspec.yml  infra-scripts-guide.md
rag_src/: CLAUDE_RAG.md  pyproject.toml  rag_instructions.md
rag_src/arbiter_rag/: __init__.py  athena_sql.py  chunking.py  config.py  embeddings.py  evaluation.py  generation.py  guardrails.py  ingest.py  lexical.py  loaders.py  observability.py  preflight.py  rerank.py  retrieval.py  serialization.py  vectors.py
rag_src/config/: .env.example  dev.yaml  prod.yaml  settings.toml  test.yaml
rag_src/data_generators/: gen_hr_pdfs.py
rag_src/eval/: make_sales_golden.py  quality_gate.sh  run_answer_eval.py  run_hr_eval.py  run_retrieval_eval.py  run_sales_eval.py
rag_src/notebooks/: hr_rag_lab.ipynb  sales_rag_lab.ipynb
rag_src/tests/: test_rag_enhancements.py
tests-adversarial/: .env.example  .gitignore  README.md  package-lock.json  package.json  pyproject.toml
tests-adversarial/auth/: conftest.py  test_brute_force.py  test_chat_no_signature.py  test_cross_persona.py  test_default_creds.py  test_expired_token.py  test_forced_browsing.py  test_forged_groups.py  test_idor.py  test_password_reset.py  test_pool_config.py  test_session_swap.py  test_token_replay.py
tests-adversarial/dos/: __init__.py  classifiers.py  conftest.py  test_payload_oversize.py  test_rate_limit.py  test_resource_exhaustion.py
tests-adversarial/e2e/: fixtures.js  global-setup.js  playwright.config.js
tests-adversarial/fault/: __init__.py  classifiers.py  conftest.py  test_error_propagation.py  test_fail_closed.py  test_partial_failure_consistency.py  test_unsafe_third_party.py
tests-adversarial/features/: classifiers.py  conftest.py  test_chat_cost_bounds.py  test_chat_roundtrip.py  test_conversation_persistence.py  test_kb_retrieval.py  test_specialist_routing.py  test_token_usage_recorded.py
tests-adversarial/fuzz/: _payloads.py  conftest.py  test_api_routes.py  test_hypothesis_strategies.py  test_open_redirects.py
tests-adversarial/headers/: __init__.py  classifiers.py  conftest.py  test_clickjacking.py  test_cors.py  test_csrf.py  test_https_only.py  test_security_headers.py  test_tls_ciphers.py
tests-adversarial/llm/: conftest.py  test_cost_dos.py  test_curated_jailbreaks.py  test_generative_probes.py  test_jira_blackbox.py
tests-adversarial/logging_audit/: __init__.py  classifiers.py  conftest.py  test_log_injection_downstream.py  test_log_redaction.py  test_security_events_logged.py
tests-adversarial/logic/: __init__.py  classifiers.py  conftest.py  test_action_state_machine.py  test_field_exposure.py  test_race_conditions.py
tests-adversarial/scripts/: __init__.py  check_manifest_drift.py  compliance_report.py  emit_storage_states.py  promote_baseline.py  run_all.py
tests-adversarial/src/: __init__.py
tests-adversarial/tests/: test_diff.py  (+25 more)
(+413 files in other folders)
